# housing-ml-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  dagster.yaml  docker-compose.dev.yml  docker-compose.yml  main.py  openapi.json  prometheus.yml  pyproject.toml  requirements.txt  workspace.yaml
grafana/provisioning/dashboards/: api-metrics.json
grafana/provisioning/datasources/: datasources.yml
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
src/: __init__.py
src/adapter/: __init__.py
src/adapter/driven/etl/: __init__.py  assets.py  config.yaml  dagster_adapter.py
src/adapter/driven/model/: __init__.py  model_resource.py  sklearn_adapter.py
src/adapter/driven/storage/: __init__.py  postgres_adapter.py  postgres_resource.py
src/adapter/driving/: __init__.py
src/adapter/driving/fastapi/: app.py  handler.py  metrics.py  middleware.py  models.py
src/config/: container.py  logging.py  settings.py
src/core/: __init__.py
src/core/domain/: __init__.py  exceptions.py
src/core/domain/entities/: housing_record.py  prediction.py
src/core/port/: __init__.py  etl_port.py  input_port.py  model_port.py  service_port.py  storage_port.py
src/core/service/: __init__.py  prediction_service.py
tests/: conftest.py  test_assets.py  test_base.py  test_dummy.py
tests/integration/: test_database.py  test_pipeline.py
tests/mocks/: __init__.py  mock_generator.py
tests/unit/: conftest.py  test_core.py  test_dagster_adapter.py  test_postgres_adapter.py  test_prediction_service.py  test_sklearn_adapter.py
