[tool.poetry]
name = "housing-ml-pipeline"
version = "0.1.0"
description = "Housing prediction ETL service"
authors = ["Joaquín Soro <contact@jsoro.dev>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9.13,<3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
dagster = "^1.10.9"
dagit = "^1.10.9"
pandas = "1.5.0"
numpy = "1.23.4"
scikit-learn = "1.1.2"
joblib = "1.2.0"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
pydantic = "^2.11.3"
dependency-injector = "^4.46.0"
scipy = "1.9.2"
python-dateutil = "2.8.2"
pytz = "2022.4"
six = "1.16.0"
threadpoolctl = "3.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
mypy = "^0.991"
pre-commit = "^3.3.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "B", "I"]
lint.ignore = []
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -ra --strict-markers --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.dagster]
module_name = "housing_pipeline"
